--- a/app/src/main/res/layout/activity_consumer_modern_dashboard.xml
+++ b/app/src/main/res/layout/activity_consumer_modern_dashboard.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ConsumerModernDashboard">
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ConsumerDashboard"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
