--- a/app/src/main/res/layout/consumer_image_item.xml
+++ b/app/src/main/res/layout/consumer_image_item.xml
@@ -19,7 +19,7 @@
 
             <TextView
                 android:id="@+id/cardProductName"
-                android:layout_width="100dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:text="name"
                 android:textColor="@color/black"
@@ -29,7 +29,7 @@
 
             <TextView
                 android:id="@+id/cardProductPrice"
-                android:layout_width="100dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginBottom="5dp"
@@ -39,7 +39,7 @@
 
             <TextView
                 android:id="@+id/cardProductQuantity"
-                android:layout_width="100dp"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:text="quantity"
                 android:textColor="@color/black"
@@ -55,35 +55,65 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/user"
-            android:layout_marginLeft="5dp"/>
+            android:layout_marginLeft="20dp"/>
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="35dp"
-            android:layout_marginLeft="8dp"
-            android:gravity="center"
-            android:src="@drawable/ic_baseline_remove_circle_24"
-            android:textSize="20dp" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
-            android:layout_marginLeft="5dp"
-            android:gravity="center"
-            android:text="Add"
-            android:textStyle="bold"
-            android:textSize="20dp" />
+            android:orientation="vertical"
+            android:layout_marginLeft="10dp">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="35dp"
-            android:layout_marginLeft="5dp"
-            android:gravity="center"
-            android:src="@drawable/ic_baseline_add_circle_24"
-            android:textSize="20dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="cart"
+                android:textStyle="bold"
+                android:textSize="25dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginBottom="5dp"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/removeFromCart"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="8dp"
+                    android:gravity="center"
+                    android:src="@drawable/ic_baseline_remove_circle_24"
+                    android:textSize="20dp" />
+
+                <TextView
+                    android:id="@+id/cartCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="10dp"
+                    android:gravity="center"
+                    android:text="0"
+                    android:textStyle="bold"
+                    android:textSize="20dp" />
+
+                <ImageView
+                    android:id="@+id/addToCart"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="5dp"
+                    android:gravity="center"
+                    android:src="@drawable/ic_baseline_add_circle_24"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
+
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
